--- a/package.json
+++ b/package.json
@@ -12,42 +12,42 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.7",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^10.1.1",
     "@angular/common": "~10.0.7",
-    "@angular/compiler": "~9.1.0",
+    "@angular/compiler": "~10.0.7",
     "@angular/core": "~10.0.7",
-    "@angular/fire": "^6.0.0",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.7",
     "@angular/localize": "~10.0.7",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^10.1.1",
     "@angular/platform-browser": "~10.0.7",
     "@angular/platform-browser-dynamic": "~10.0.7",
     "@angular/router": "~10.0.7",
     "@angular/service-worker": "~10.0.7",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
-    "@sentry/browser": "^5.16.1",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@sentry/browser": "^5.20.1",
     "angular-cli-ghpages": "^0.6.2",
-    "bootstrap": "^4.4.1",
-    "firebase": "^7.14.6",
+    "bootstrap": "^4.5.0",
+    "firebase": "^7.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "ngx-owl-carousel-o": "^3.0.1",
-    "ngx-toastr": "^12.0.1",
+    "ngx-owl-carousel-o": "^4.0.0",
+    "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.900",
-    "@angular-devkit/build-angular": "^0.1000.4",
-    "@angular/cli": "~10.0.4",
+    "@angular-devkit/architect": "~0.1000.4",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
     "@angular/compiler-cli": "~10.0.7",
     "@angular/language-service": "~10.0.7",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.53",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -55,10 +55,10 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.9.7"
   }
 }
