--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-notes": {
+    "findme": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-notes",
+            "outputPath": "dist/findme",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -76,18 +76,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-notes:build"
+            "browserTarget": "fidnme:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-notes:build:production"
+              "browserTarget": "findme:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-notes:build"
+            "browserTarget": "findme:build"
           }
         },
         "test": {
@@ -126,11 +126,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-notes:serve"
+            "devServerTarget": "findme:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-notes:serve:production"
+              "devServerTarget": "findme:serve:production"
             }
           }
         },
@@ -141,7 +141,7 @@
       }
     }
   },
-  "defaultProject": "ng-notes",
+  "defaultProject": "findme",
   "cli": {
     "analytics": false
   }
